--- a/UNmujeres/src/main/webapp/WEB-INF/web.xml
+++ b/UNmujeres/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,58 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
+
+    <filter>
+        <filter-name>SessionFilter</filter-name>
+        <filter-class>com.example.unmujeres.filtros.SessionFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>AdminFilter</filter-name>
+        <filter-class>com.example.unmujeres.filtros.AdminFilter</filter-class>
+    </filter>
+
+    <filter>
+        <filter-name>CordiFilter</filter-name>
+        <filter-class>com.example.unmujeres.filtros.CordiFilter</filter-class>
+    </filter>
+
+    <filter>
+        <filter-name>EncFilter</filter-name>
+        <filter-class>com.example.unmujeres.filtros.EncFilter</filter-class>
+    </filter>
+
+    <filter>
+        <filter-name>EncCordiFilter</filter-name>
+        <filter-class>com.example.unmujeres.filtros.EncCordiFilter</filter-class>
+    </filter>
+
+    <!-- Mapeos -->
+    <filter-mapping>
+        <filter-name>SessionFilter</filter-name>
+        <url-pattern>/administrador/*</url-pattern>
+        <url-pattern>/coordinador/*</url-pattern>
+        <url-pattern>/encuestador/*</url-pattern>
+        <url-pattern>/shared/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>AdminFilter</filter-name>
+        <url-pattern>/admin/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>CordiFilter</filter-name>
+        <url-pattern>/coord/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>EncFilter</filter-name>
+        <url-pattern>/enc/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>EncCordiFilter</filter-name>
+        <url-pattern>/shared/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
